# Academic-Research-Agent

./: README.md
backend/: .env  .env.example  pyproject.toml
backend/src/: __init__.py  agent.py  build_index.py  config.py  main.py  models.py  prompts.py  test_hybrid_retrieval.py  test_llm.py  utils.py
backend/src/rag/: update_db.py
backend/src/services/: __init__.py  bm25_store.py  chunker.py  hybrid_retriever.py  notes.py  pdf_parser.py  planner.py  reporter.py  scorer.py  search.py  skill_types.py  skills.py  text_processing.py  tool_events.py  vector_store.py  web_search_skill.py
backend/src/store/: bm25.pkl  chunks.json
backend/src/store/qdrant/: meta.json
backend/src/store/qdrant/collection/papers/: storage.sqlite
frontend/: .env.local  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
memory_data/: memory.db
notes/: note_20260407_152216_0.md  note_20260407_152216_1.md  note_20260407_152216_2.md  note_20260407_152216_3.md  note_20260407_152705_4.md  note_20260408_224517_5.md  note_20260408_224517_6.md  note_20260408_224517_7.md  note_20260408_224517_8.md  note_20260408_224517_9.md  note_20260409_000338_10.md  note_20260409_001417_11.md  note_20260409_001417_12.md  note_20260409_001417_13.md  note_20260409_001417_14.md  note_20260409_114034_15.md  note_20260409_114045_16.md  note_20260409_114532_17.md  note_20260409_114542_18.md  note_20260409_120541_19.md  note_20260409_120550_20.md  note_20260409_122305_21.md  note_20260409_122314_22.md  note_20260409_153711_23.md  note_20260409_153721_24.md  note_20260409_164751_25.md  (+22 more)
(+4 files in other folders)
